Update and refactore code, improve perf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ dependencies = [
     "matplotlib>=3.10.3",
     "pillow>=11.3.0",
     "pyxelate",
+    "watchdog>=6.0.0",
 ]
 
 [tool.uv.sources]
 pyxelate = { git = "https://github.com/sedthh/pyxelate.git" }
+
+[tool.marimo.runtime]
+watcher_on_save = "autorun"
